<resources>
    <string name="app_name">VENU</string>
    <string name="bot_nav_home">Home</string>
    <string name="bot_nav_checker">Checker</string>
    <string name="bot_nav_profile">Profile</string>
    <string name="greeting">Welcome!</string>
    <string name="or">OR</string>
    <string name="sign_up_google">SIGN UP WITH GOOGLE</string>
    <string name="sign_in_google">SIGN IN WITH GOOGLE</string>
    <string name="font_size">Please Set The Font Size</string>
    <string name="small">SMALL</string>
    <string name="medium">MEDIUM</string>
    <string name="large">LARGE</string>
    <string name="Rline">Right Line</string>
    <string name="Lline">Left Line</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="signin">SIGN IN</string>
    <string name="signup">SIGN UP</string>
    <string name="signuptxt">Already have an account?</string>
    <string name="signupbtn">Sign In here</string>
    <string name="signintxt">Dont\' have an account?</string>
    <string name="signinbtn">Sign Up here</string>
    <string name="sign_out">Sign Out</string>
    <string name="technology">Technology</string>
    <string name="sport">Sport</string>
    <string name="photo">Photo</string>
    <string name="lifestyle">Life Style</string>
    <string name="food">Food</string>
    <string name="economy">Economy</string>
    <string name="entertainement">Entertainment</string>
    <string name="politic">Politic</string>
    <string name="analyze">Analyze</string>
    <string name="warning">OOPS! IT SEEMS YOU  DON\’T HAVE AN ACCOUNT</string>
    <string name="choosethetopic">Choose The Topic</string>
    <string name="chekertext">Check anything you want</string>
    <string name="news_title">Title</string>
    <string name="news_topic">Topic</string>
    <string name="news_percentage">Percentage</string>
    <string name="checker_message">Start verify your news!</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="critic_advices">Critics and Advices</string>
    <string name="about_venu">About VENU</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="subscribe">Subscribe</string>
    <string name="faq">FAQ</string>
    <string name="version">1.0</string>
    <string name="release">2023</string>
    <string name="back_button">back_button</string>
    <string name="bookmark_img">bookmark_img</string>
    <string name="start_saving_your_favorite_news">Start saving your favorite news!</string>
    <string name="checker_percentage">0%</string>
    <string name="fab_topic">button_topic</string>
    <string name="fab_menu">button_topic</string>
    <string name="icon_appbar">icon_appbar</string>
    <string name="fab_check">button_check</string>
    <string name="err_msg_required">%1$s is required</string>
    <string name="err_msg_email">Invalid Email</string>
    <string name="err_msg_password">Your password doesn\'t match!</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="recommend">Recommended for you</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="send">SEND</string>
    <string name="subscription">Subscription</string>
    <string name="logout_confirmation_title">Are You Sure Want To Sign Out?</string>
    <string name="logout_confirmation_message">Please Choose Your Preference</string>
    <string name="logout_confirmation_yes">YES</string>
    <string name="logout_confirmation_no">NO</string>

    <!-- FAQ and Answers -->
    <string name="faq_long">Frequently Asked Questions</string>
    <string name="faq_question1">Apa maksud persentase pada berita?</string>
    <string name="faq_answer1">Persentase tersebut merupakan indikasi ketidakbenaran berita tersebut. Dengan melihat cara penulisan, bahasa yang digunakan, pemilihan kosakata, dsb, model kami dapat menilai berapa persen suatu berita terindikasi hoaks.</string>
    <string name="faq_question2">Bagaimana jika berita yang ingin saya deteksi tidak tercantum pada beranda?</string>
    <string name="faq_answer2">Untuk mendeteksi berita yang tidak tercantum, pengguna dapat menyalin (copy) teks yang hendak dideteksi, kemudian pergi ke halaman Checker (terletak di bagian tengah bawah pada aplikasi). Setelah itu klik tombol dengan tanda (+), tempel (paste) teks dan klik Analyze.</string>
    <string name="faq_question3">Bagaimana fitur Hoax Detector di VENU bekerja?</string>
    <string name="faq_answer3">Fitur ini bekerja dengan menggunakan model Machine Learning. Teks yang diterima akan diubah menjadi token, kemudian token tersebut akan dianalisis oleh model. Setelah itu, berdasarkan pembelajaran historis, model dapat menghitung persentase hoaks pada text tersebut.</string>
    <string name="faq_question4">Bagaimana jika ingin mencari berita terkait?</string>
    <string name="faq_answer4">Untuk mengakses berita terkait, kami menyediakan fitur rekomendasi berita yang dapat diakses pada bagian bawah halaman berita. Rekomendasi berita ini akan menyediakan berita berdasarkan kemiripan pada berita yang sedang dibaca.</string>

    <!-- About VENU -->
    <string name="about_venu_desc">VENU (Verify News for You) adalah platform yang menyediakan berita terkini dari berbagai sumber dengan berbagai topik. VENU juga memiliki fitur Detektor Hoax (Hoax Checker) untuk memeriksa kebenaran informasi, dimana pengguna dapat memasukkan input informasi berupa teks dan mendapatkan hasil persentase kebenaran informasi tersebut.</string>

    <!--web client id-->
    <string name="default_web_client_id">1033764408342-f0jd02ipb6vcuuidbs8ap2j0i85b6g4k.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="source">Source</string>
    <string name="ads1">Cek Hoax Tanpa Batas!</string>
    <string name="ads2">Langganan sekarang untuk perlindungan penuh.</string>

    <string name="testingtxt">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Proin vel velit id elit facilisis pellentesque eu eu turpis. Curabitur ut tincidunt quam, non euismod massa. Duis luctus mauris id turpis fermentum, eget interdum tortor laoreet. Integer eu odio ut risus malesuada fermentum id nec turpis. Sed vulputate, arcu ut venenatis fringilla, sapien arcu auctor lectus, in ultrices odio leo non turpis. Suspendisse potenti. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Phasellus sit amet nibh augue. Integer fringilla libero vel sapien fermentum scelerisque.

        Aliquam erat volutpat. Ut cursus euismod turpis, vel ullamcorper odio tincidunt vel. Mauris ullamcorper, justo a euismod suscipit, felis purus suscipit orci, vel fermentum erat sem in leo. Quisque eleifend purus eu scelerisque bibendum. Maecenas ut malesuada felis, nec bibendum libero. Nulla facilisi. Fusce eget augue id justo consequat laoreet. Phasellus gravida, libero ac vehicula hendrerit, nisl nisi euismod orci, eget commodo elit turpis vel dui. Integer efficitur, dolor eu tristique iaculis, metus leo luctus elit, eget tincidunt metus velit vitae eros. Fusce eu nulla sit amet nisi luctus vulputate. Suspendisse id justo eu lacus euismod feugiat. Vivamus auctor, risus ut scelerisque bibendum, ligula purus tristique quam, non imperdiet quam purus non augue.
    </string>
    <string name="checking_output">Checking Output</string>

</resources>
