<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.faq.FaqActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/tv_faq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/faq_long"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_question1"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_answer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:justificationMode="inter_word"
            android:text="@string/faq_answer1"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_question2"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_answer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:justificationMode="inter_word"
            android:text="@string/faq_answer2"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_question3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_question3"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_answer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:justificationMode="inter_word"
            android:text="@string/faq_answer3"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_question4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_question4"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_answer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:justificationMode="inter_word"
            android:text="@string/faq_answer4"
            android:textSize="16sp"/>
    </LinearLayout>

</ScrollView>