<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp">

    <ImageView
        android:id="@+id/close_bottom_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:src="@drawable/rectangle_355"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/choosethetopic"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/close_bottom_sheet" />

    <LinearLayout
        android:id="@+id/topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_choose">

        <LinearLayout
            android:id="@+id/topic1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_tech"
                android:drawablePadding="10dp"
                android:elevation="3dp"
                android:gravity=""
                android:paddingHorizontal="10dp"
                android:text="@string/technology" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_sport"
                android:drawablePadding="10dp"
                android:elevation="3dp"
                android:gravity=""
                android:paddingHorizontal="10dp"
                android:text="@string/sport" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_photo"
                android:drawablePadding="10dp"
                android:elevation="3dp"
                android:gravity=""
                android:paddingHorizontal="10dp"
                android:text="@string/photo" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lifestyle"
                android:drawablePadding="10dp"
                android:elevation="3dp"
                android:gravity=""
                android:paddingHorizontal="10dp"
                android:text="@string/lifestyle" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/topic2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/topic1"
            app:layout_constraintTop_toBottomOf="@+id/close_bottom_sheet">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_food"
                android:drawablePadding="10dp"
                android:elevation="3dp"
                android:gravity=""
                android:paddingHorizontal="10dp"
                android:text="@string/food" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_economy"
                android:drawablePadding="10dp"
                android:elevation="3dp"
                android:gravity=""
                android:paddingHorizontal="10dp"
                android:text="@string/economy" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_entertainment"
                android:drawablePadding="10dp"
                android:elevation="3dp"
                android:gravity=""
                android:paddingHorizontal="10dp"
                android:text="@string/entertainement" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_politic"
                android:drawablePadding="10dp"
                android:elevation="3dp"
                android:gravity=""
                android:paddingHorizontal="10dp"
                android:text="@string/politic" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>