<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/rectangle_355" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/font_size"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_btn_white_round_50"
            android:drawableEnd="@drawable/ic_font_size"
            android:elevation="5dp"
            android:paddingHorizontal="60dp"
            android:text="@string/small"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/bg_btn_white_round_50"
            android:drawableEnd="@drawable/ic_font_size"
            android:elevation="5dp"
            android:paddingHorizontal="60dp"
            android:text="@string/medium"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/bg_btn_white_round_50"
            android:drawableEnd="@drawable/ic_font_size"
            android:elevation="5dp"
            android:paddingHorizontal="60dp"
            android:text="@string/large"
            android:textAllCaps="false" />

    </LinearLayout>
</LinearLayout>
